--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,21 +22,13 @@ jobs:
         node-version: '18'
 
     - name: Install dependencies
-      run: npm install --legacy-peer-deps
-
-    - name: Run tests (if any)
-      run: npm test
+      run: |
+        npm install --legacy-peer-deps
 
     - name: Build the Next.js app
       run: npm run build
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and Push Docker Image
+    - name: Deploy or Push Docker Image (Optional)
       run: |
-        docker build -t docker.io/akashgupta2233/my-blog:latest .
-        docker push docker.io/akashgupta2233/my-blog:latest
+        docker build -t docker.io/akashgupta2233/ai-assisted-blog:latest .
+        docker push docker.io/akashgupta2233/ai-assisted-blog:latest
