--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,22 +13,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out repository
-      uses: actions/checkout@v2
+      - name: Check out repository
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Install dependencies
-      run: |
-        npm install --legacy-peer-deps
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build the Next.js app
-      run: npm run build
+      - name: Build Docker image
+        run: |
+          docker build -t docker.io/akashgupta2233/my-blog:latest .
 
-    - name: Deploy or Push Docker Image (Optional)
-      run: |
-        docker build -t docker.io/akashgupta2233/ai-assisted-blog:latest .
-        docker push docker.io/akashgupta2233/ai-assisted-blog:latest
+      - name: Push Docker image
+        run: |
+          docker push docker.io/akashgupta2233/my-blog:latest
